Fix grid footer entry form on narrow screens

--- a/app/containers/BudgetGrid/style.scss
+++ b/app/containers/BudgetGrid/style.scss
@@ -65,7 +65,8 @@
   }
 
   tfoot {
-    height: 40px;
+    display: flex;
+    flex-wrap: nowrap;
     border-top: 1px solid $gray;
   }
 
